Modificacion del footer en los archivos html

--- a/Recomendado.html
+++ b/Recomendado.html
@@ -202,7 +202,20 @@
     </aside>
 
     <footer>
-
-    </footer>
+        <p id="p1">
+            Politica de privacidad
+        </p>
+   
+        <p id="p1">
+            Contacto.info@web.com
+        </p >
+        <p id="p1">
+            Santa Marta-Colombia
+        </p>
+   
+        <p id="p2">
+            Copyright2016
+        </p>
+       </footer>
 </body>
 </html>
