Actualizacion Genero y aside

--- a/Recomendado.html
+++ b/Recomendado.html
@@ -17,7 +17,7 @@
             <ul>
                 <li><a href="Index.html">Home</a> | </li>
                 <li><a href="Estreno.html">Estrenos</a> | </li>
-                <li><a href="#">Generos</a> | </li>
+                <li><a href="Genero.html">Generos</a> | </li>
                 <li><a href="Recomendado.html">Recomendados </a> | </li>
                 <li><a href="Serie.html">Series</a> </li>
             </ul>
@@ -198,7 +198,27 @@
     </section>
 
     <aside>
+        <form action="#">
+            <p>
+                <label for="nombre">Name: </label>
+                <input type="text" id="nombre"> 
+            </p>
+            <p>
+                <label for="Email">Email addres: </label>
+                <input type="email" id="Email">
+            </p>
+            <p>
+                <label for="comentario">Comentario</label>
+            </p>
+            <p>
+                
+                <textarea id="comentario" cols="30" rows="10"  ></textarea>
+            </p>
+            <p>
+                <input type="submit" value="submit" >
+            </p>
 
+        </form>
     </aside>
 
     <footer>
